--- a/issues/resolved/1004.md
+++ b/issues/resolved/1004.md
@@ -37,3 +37,6 @@ Based on the project's modular architecture defined in `spec.md`, here is the pr
 4.  **Iterative Development**:
     *   We will develop and test one parser at a time, starting with a single HTML file in each session to manage context size and complexity.
     *   The immediate next task is to create the `src/parsers/` directory and the first parser for one of the target websites.
+
+5.  **Testing Utility**:
+    *   The `test_parse.py` script will be kept and used as a dedicated utility for testing individual parsers on local HTML files. This allows for rapid development and debugging of parsers before they are integrated into the main workflow.
